<resources>
    <string name="app_name">ContactoApp</string>
    <string name="lbl_full_name">Nombre completo</string>
    <string name="lbl_birth_date">Fecha de nacimiento</string>
    <string name="lbl_phone">Teléfono</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_contact_description">Descripción Contacto</string>
    <string name="lbl_day">Día</string>
    <string name="lbl_month">Mes</string>
    <string name="lbl_year">Año</string>
    <string name="btn_next">Siguiente</string>
    <string name="btn_edit">Editar Datos</string>
    <string name="lbl_confirm_data">Confirmar Datos</string>
    <string name="lbl_phone_edit">Telf.</string>
    <string name="lbl_contact_description_edit">Descripción</string>
</resources>