<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_edit_text"
    tools:context=".ConfirmActivity"
    android:paddingLeft="@dimen/padding_confirm_activity"
    android:paddingRight="@dimen/padding_confirm_activity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/lbl_confirm_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/lbl_confirm_data"
                    android:textSize="@dimen/title_confirm_data" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_full_name_edit"
                    android:text=""
                    android:layout_marginTop="@dimen/margin_top_confirm_activity"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_birth_date_edit"
                    android:text="@string/lbl_birth_date"
                    android:layout_marginTop="@dimen/margin_top_confirm_activity_between_views"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_phone_edit"
                    android:text="@string/lbl_phone_edit"
                    android:layout_marginTop="@dimen/margin_top_confirm_activity_between_views"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_email_edit"
                    android:text="@string/lbl_email"
                    android:layout_marginTop="@dimen/margin_top_confirm_activity_between_views"/>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/lbl_contact_description_edit"
                    android:text="@string/lbl_contact_description_edit"
                    android:layout_marginTop="@dimen/margin_top_confirm_activity_between_views"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="@dimen/button_edit_width"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_edit"
                    android:id="@+id/btn_edit"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_top_confirm_activity"/>

            </com.google.android.material.textfield.TextInputLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>