<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_edit_text"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent_edit_text"
                    android:hint="@string/lbl_full_name"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:id="@+id/txt_full_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_lbl_birth_date"
                android:text="@string/lbl_birth_date"
                android:layout_gravity="center"/>

            <DatePicker
                android:layout_width="@dimen/date_picker_width"
                android:layout_height="@dimen/date_picker_height"
                android:layout_gravity="center_horizontal"
                android:id="@+id/dt_birth_date"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:background="@color/transparent_edit_text"
                    android:hint="@string/lbl_phone"
                    android:id="@+id/txt_phone"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent_edit_text"
                    android:hint="@string/lbl_email"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"
                    android:id="@+id/txt_email"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent_edit_text"
                    android:hint="@string/lbl_contact_description"
                    android:id="@+id/txt_contact_description"
                    android:layout_marginLeft="@dimen/margin_left_right"
                    android:layout_marginRight="@dimen/margin_left_right"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_next"
                    android:id="@+id/btn_next"/>

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>